# build-with-ai-sessions

./: .gitignore  02_tool_calling_nyi.ipynb  README.md  pyproject.toml  requirements.txt
apps/: README.md  main.py
apps/pages/: comparison.py  exa_comparison.py  llm_call.py  mcp_example.py  mcp_intro.py  multi_agent.py  react_agent.py  remote_mcp_comparison.py  tool_call.py
nbs/: 01_structured_outputs.ipynb  02_tool_calling.ipynb
nbs/slides/: 01_Day_Intro.md
streamlit-container-demo/: CLOUDFLARE_DEPLOYMENT.md  Dockerfile  README.md  package-lock.json  pyproject.toml  wrangler.jsonc
streamlit-container-demo/apps/: main.py
streamlit-container-demo/apps/pages/: __init__.py  exa_comparison.py  llm_call.py  mcp_example.py  mcp_intro.py  multi_agent.py  remote_mcp_comparison.py  tool_call.py
streamlit-container-demo/src/: index.ts
